# OpenGateway

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTION.md  Cargo.toml  DEPLOYMENT.md  DEVELOPMENT.md  Dockerfile  MCP-Authentication.md  Makefile  README.md  agents.env.example  buf.gen.yaml  cargo-docker.config.toml  clear-wm.sh  deny.toml  rust-toolchain.toml  start-all.sh
agents/airbnb_planner_multiagent-main/: .gitignore  README.md  README_CN.md  agent_control.sh  mock_registry.py  pyproject.toml  start.sh
agents/airbnb_planner_multiagent-main/airbnb_agent/: README.md  README_CN.md  __main__.py  agent_executor.py  airbnb_agent.py
agents/airbnb_planner_multiagent-main/document_agent/: README.md  README_CN.md  __init__.py  __main__.py  call_service_demo.py  document_agent.py  document_executor.py  document_mcp.py  example.env  web_bridge_server.py
agents/airbnb_planner_multiagent-main/event_agent/: README.md  README_CN.md  __main__.py  event_agent.py  event_executor.py
agents/airbnb_planner_multiagent-main/finance_agent/: README.md  README_CN.md  __main__.py  finance_agent.py  finance_executor.py
agents/airbnb_planner_multiagent-main/flight_agent/: README_CN.md  flight_agent.py
agents/airbnb_planner_multiagent-main/flights/: CAN_LAX_2026-03-09_20260309_121454.json  JFK_ATL_2026-03-09_20260305_112959.json  LHR_LAX_2026-03-13_2026-03-20_20260313_165552.json  NRT_LAX_2026-03-13_2026-03-20_20260313_165550.json  NYC_LAX_2026-03-13_2026-03-20_20260313_165458.json  PEK_LAX_2026-03-09_20260309_121453.json  PEK_LAX_2026-03-09_20260309_122634.json  PEK_LAX_2026-03-09_20260309_125556.json  PEK_LAX_2026-03-09_20260309_130222.json  PEK_LAX_2026-03-09_20260309_140037.json  PEK_LAX_2026-03-13_2026-03-20_20260313_165548.json  PEK_LAX_2026-03-14_2026-03-21_20260313_160306.json  PEK_SFO_2026-03-05_2026-03-10_20260305_122823.json  PEK_SFO_2026-03-05_2026-03-10_20260305_123901.json  PEK_SFO_2026-03-05_20260305_125339.json  PEK_SFO_2026-03-09_2026-03-13_20260305_113816.json  PEK_SFO_2026-03-09_2026-03-13_20260305_115004.json  PEK_SFO_2026-03-09_2026-03-13_20260305_115152.json  PEK_SFO_2026-03-09_2026-03-13_20260305_115349.json  PEK_SFO_2026-03-09_2026-03-13_20260305_115603.json  PEK_SFO_2026-03-09_2026-03-13_20260305_115736.json  PEK_SFO_2026-03-09_2026-03-13_20260305_115950.json  PEK_SFO_2026-03-09_2026-03-13_20260305_120204.json  PEK_SFO_2026-03-09_2026-03-13_20260305_121124.json  PKX_LAX_2026-03-09_20260309_125620.json  PVG_ATL_2026-03-09_20260305_112707.json  PVG_LAX_2026-03-09_20260309_121452.json  PVG_LAX_2026-03-13_2026-03-20_20260313_165549.json  PVG_LAX_2026-03-14_2026-03-21_20260313_145603.json  PVG_LAX_2026-03-14_2026-03-21_20260313_160303.json  SFO_PEK_2026-03-10_20260305_125346.json
agents/airbnb_planner_multiagent-main/host_agent/: __main__.py  host_router.py  logging_plugin.py  orchestrator copy.py  orchestrator.py  registry_client.py  routing_agent.py  sub_agent_caller.py  sub_agent_searcher.py
agents/airbnb_planner_multiagent-main/hotel_agent/: __init__.py  hotel_agent.py  hotel_executor.py
agents/airbnb_planner_multiagent-main/hotels/: Century_City_Los_Angeles_2026-03-09_2026-03-10_20260309_130230.json  Century_City_Los_Angeles_2026-03-09_2026-03-10_20260309_140031.json  (+44 more)
crates/a2a-sdk/: Cargo.toml  README.md
crates/a2a-sdk/src/: jsonrpc.rs  lib.rs
crates/celx/: Cargo.toml
(+324 files in other folders)
