# Copyright 2026 Tsinghua University
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# This file was created by Tsinghua University and is not part of
# the original agentgateway project by Solo.io.

[package]
name = "a2a-sdk"
version = "0.7.0"
edition = "2024"
description = "Unofficial Google A2A SDK. Currently supports v0.3.0 of the specification."
license = "MIT"
repository = "https://github.com/agentgateway/agentgateway"
homepage = "http://a2aproject.github.io/A2A/"

[dependencies]
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
