# Modified by Tsinghua University, 2026
# Original source: https://github.com/agentgateway/agentgateway
# Licensed under the Apache License, Version 2.0

[package]
name = "agent-celx"
version = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
publish = { workspace = true }

[lib]
path = "src/lib.rs"

[dependencies]
cel.workspace = true
once_cell.workspace = true
rand.workspace = true
base64.workspace = true
ipnet.workspace = true
regex.workspace = true
serde_json.workspace = true
serde.workspace = true
uuid.workspace = true

[dev-dependencies]
anyhow.workspace = true